k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foodapp
  namespace: foodapp
  labels:
    app.kubernetes.io/name: foodapp
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: foodapp
  ports:
    - name: http
      port: 8090
      targetPort: http
    - name: management
      port: 9090
      targetPort: management
